#include "Guerrier.h"

class Viking : public Guerrier {
    public:
        Viking();
};