#pragma once
#include "Guerrier.h"

class Persian : public Guerrier {
    public:
        Persian();
};